--- a/level1welcomepage.html
+++ b/level1welcomepage.html
@@ -25,6 +25,11 @@
             🎉 Win the Game!
             Collect all the Energy Relics and become a Word Master!</pre>
         <button id="startbutton" type="button">Start</button>
+        <script>
+            document.getElementById("startbutton").addEventListener("click", function() {
+              window.location.href = "http://localhost:63342/ElleHacks-Hackathon-2025/game.html?_ijt=9b32cpd8mle9fd2ola4pjkb40n&_ij_reload=RELOAD_ON_SAVE";
+            });
+        </script>
     </div>
 </body>
 </html>
