--- a/game.html
+++ b/game.html
@@ -8,8 +8,7 @@
 <body>
 <div class="game_content">
 <h1>Flashcard</h1>
-    <div id="Flashcard" class="flashcard">
-
+    <div id="flashcard" class="flashcard">
         <div class="front">
         <p id="question"></p>
         </div>
