--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="game_content">
-<h1>Flashcard</h1>
+<h1>Learning Time!</h1>
     <div id="flashcard" class="flashcard">
         <div class="front">
         <p id="question"></p>
@@ -16,7 +16,7 @@
             <p id="answer"></p>
         </div>
     </div>
-    <button id="flip-card">flip card</button>
+    <button id="record-card">record</button>
     <button id="next-card">next</button>
 </div>
 <script src="gamescript.js"></script>
