--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
         </div>
     </div>
     <button id="record-card">record</button>
+    <audio class="playback" controls></audio>
     <button id="next-card">next</button>
 </div>
 <script src="gamescript.js"></script>
