--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
 <body>
 <div class="game_content">
 <h1>Learning Time!</h1>
+
     <div id="flashcard" class="flashcard">
         <div class="front">
         <p id="question"></p>
@@ -17,8 +18,33 @@
         </div>
     </div>
     <button id="record-card">record</button>
-    <audio class="playback" controls></audio>
     <button id="next-card">next</button>
+</div>
+<script src="gamescript.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Game</title>
+    <link rel="stylesheet" href="card.css">
+</head>
+<body>
+<div class="game_content">
+  <h1>Learning Time!</h1>
+  <div id="flashcard" class="flashcard">
+      <div class="front">
+          <p id="question"></p>
+      </div>
+      <div class="back">
+          <p id="answer"></p>
+      </div>
+  </div>
+  <button id="speakAI">Speak</button>
+  <button id="record-card">Record</button>
+  <button id="next-card">Next</button>
 </div>
 <script src="gamescript.js"></script>
 </body>
