--- a/level1welcomepage.html
+++ b/level1welcomepage.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Barlow+Condensed:ital,wght@0,800" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
     <script>
        
     </script>
 </head>
 <body>
     <div class="welcome">
-        <h1>WELCOME TO THE WORDWHIZ</h1>
-        <pre>📝 How to Play!
-            1️⃣ Learn the Words
-            Look at the picture on the flashcard.
-            Listen to the AI say the word.
-            Repeat the word out loud!
-            2️⃣ Pass the Lesson
-            Say all the words correctly to move to the next level!
-            3️⃣ Match the Words
-            Look at the pictures and match them to the right words.
-            Get them all correct to win the Energy Relic!
-            🎉 Win the Game!
-            Collect all the Energy Relics and become a Word Master!</pre>
+        <h1>WELCOME TO THE WORDWHIZ!!!</h1>
+        <div class="instructions">
+           <h4>📝 How to Play!</h4> 
+            
+           1️⃣ Learn the Words<br>
+            Look at the picture on the flashcard.<br>
+            Listen to the AI say the word.<br>
+            Repeat the word out loud!<br><br>
+
+            2️⃣ Pass the Lesson<br>
+            Say all the words correctly to move to the next level!<br><br>
+
+            3️⃣ Match the Words<br>
+            Look at the pictures and match them to the right words.<br>
+            Get them all correct to win the Energy Relic!<br><br>
+
+            🎉 Win the Game!<br>
+            Collect all the Energy Relic and become a Word Master!</div>
+
         <button id="startbutton" type="button">Start</button>
-        <script>
-            document.getElementById("startbutton").addEventListener("click", function() {
-              window.location.href = "http://localhost:63342/ElleHacks-Hackathon-2025/game.html?_ijt=9b32cpd8mle9fd2ola4pjkb40n&_ij_reload=RELOAD_ON_SAVE";
-            });
-        </script>
     </div>
 </body>
 </html>
