--- a/level1quiz.html
+++ b/level1quiz.html
@@ -1,22 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script>
-        function playbutton() {
-            alert("Play button clicked!"); // Replace with your actual function logic
-        }
-    </script>
-</head>
-<body>
-   
-    
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,34 +10,34 @@
   <div class="game-container">
     <!-- Each dropzone corresponds to one word -->
     <div class="dropzone" data-word="Dragon">
-      <img src="images/dragon.png" alt="Dragon">
+      <img src="images/dragon.webp" alt="Dragon">
     </div>
     <div class="dropzone" data-word="Fire">
       <img src="images/fire.png" alt="Fire">
     </div>
     <div class="dropzone" data-word="Water">
-      <img src="images/water.png" alt="Water">
+      <img src="images/water.jpg" alt="Water">
     </div>
     <div class="dropzone" data-word="Brave">
-      <img src="images/brave.png" alt="Brave">
+      <img src="images/brave.jpg" alt="Brave">
     </div>
     <div class="dropzone" data-word="Castle">
       <img src="images/castle.png" alt="Castle">
     </div>
     <div class="dropzone" data-word="Hero">
-      <img src="images/hero.png" alt="Hero">
+      <img src="images/hero.jpg" alt="Hero">
     </div>
     <div class="dropzone" data-word="Treasure">
-      <img src="images/treasure.png" alt="Treasure">
+      <img src="images/treasure.webp" alt="Treasure">
     </div>
     <div class="dropzone" data-word="Cave">
       <img src="images/cave.png" alt="Cave">
     </div>
     <div class="dropzone" data-word="Magic">
-      <img src="images/magic.png" alt="Magic">
+      <img src="images/magic.jpg" alt="Magic">
     </div>
     <div class="dropzone" data-word="Quest">
-      <img src="images/quest.png" alt="Quest">
+      <img src="images/quest.webp" alt="Quest">
     </div>
   </div>
 
