--- a/level2quiz.html
+++ b/level2quiz.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Shape Puzzle Key</title>
+    <link rel="stylesheet" href="puzzle.css">
 </head>
 <body>
+<div class="puzzle-container">
+    <h1>Unlock the gate! </h1>
+    <!-- Castle -->
+    <img src="images/closedgate.png" alt="Closed Castle Gate" class="castle-image">
 
+    <!-- Drag Zone -->
+    <div id="drop-zone" class="drop-zone"></div>
+
+    <!-- Draggable Options -->
+    <!-- <img src="key.png" alt="Key" id="draggable-key" class="draggable-key" draggable="true"> -->
+
+</div>
+<script src="puzzle.js"></script>
 </body>
 </html>
