--- a/level2welcome.html
+++ b/level2welcome.html
@@ -17,10 +17,10 @@
         <h4>📝 How to play!</h4>
 
         1️⃣ Find the shape!<br>
-        Find the shape that we wants.<br><br>
+        Find the shape that we want.<br><br>
 
-        2️⃣ Finish the puzzle<br>
-        Finish the puzzle to get the key<br><br>
+        2️⃣ Assemble the puzzle<br>
+        Assemble the puzzle to get the key<br><br>
 
         3️⃣ Open the door<br>
         Now you can open the door with the key<br>
