--- a/level1quiz.html
+++ b/level1quiz.html
@@ -6,55 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="gameoverall"><br>
   <h1>Match the Word to the Picture!</h1>
-  <div class="game-container">
-    <!-- Each dropzone corresponds to one word -->
-    <div class="dropzone" data-word="Dragon">
-      <img src="images/dragon.webp" alt="Dragon">
+  <div class="game-wrapper">
+    <div class="images-column" id="imagesColumn">
+      <!-- Dropzones for images will be inserted here by JavaScript -->
     </div>
-    <div class="dropzone" data-word="Fire">
-      <img src="images/fire.png" alt="Fire">
-    </div>
-    <div class="dropzone" data-word="Water">
-      <img src="images/water.jpg" alt="Water">
-    </div>
-    <div class="dropzone" data-word="Brave">
-      <img src="images/brave.jpg" alt="Brave">
-    </div>
-    <div class="dropzone" data-word="Castle">
-      <img src="images/castle.png" alt="Castle">
-    </div>
-    <div class="dropzone" data-word="Hero">
-      <img src="images/hero.jpg" alt="Hero">
-    </div>
-    <div class="dropzone" data-word="Treasure">
-      <img src="images/treasure.webp" alt="Treasure">
-    </div>
-    <div class="dropzone" data-word="Cave">
-      <img src="images/cave.png" alt="Cave">
-    </div>
-    <div class="dropzone" data-word="Magic">
-      <img src="images/magic.jpg" alt="Magic">
-    </div>
-    <div class="dropzone" data-word="Quest">
-      <img src="images/quest.webp" alt="Quest">
+    <div class="words-column" id="wordsColumn">
+      <!-- Draggable words will be inserted here by JavaScript -->
     </div>
   </div>
-
-  <div class="word-container">
-    <!-- Draggable words -->
-    <div class="draggable" draggable="true" data-word="Dragon">Dragon</div>
-    <div class="draggable" draggable="true" data-word="Fire">Fire</div>
-    <div class="draggable" draggable="true" data-word="Water">Water</div>
-    <div class="draggable" draggable="true" data-word="Brave">Brave</div>
-    <div class="draggable" draggable="true" data-word="Castle">Castle</div>
-    <div class="draggable" draggable="true" data-word="Hero">Hero</div>
-    <div class="draggable" draggable="true" data-word="Treasure">Treasure</div>
-    <div class="draggable" draggable="true" data-word="Cave">Cave</div>
-    <div class="draggable" draggable="true" data-word="Magic">Magic</div>
-    <div class="draggable" draggable="true" data-word="Quest">Quest</div>
-  </div>
-
+</div><br>
   <script src="script.js"></script>
 </body>
 </html>
