--- a/level2quiz.html
+++ b/level2quiz.html
@@ -9,13 +9,19 @@
 <div class="puzzle-container">
     <h1>Unlock the gate! </h1>
     <!-- Castle -->
-    <img src="images/closedgate.png" alt="Closed Castle Gate" class="castle-image">
+    <img id="gate-image" src="images/closedgate.png" alt="Closed Gate">
 
     <!-- Drag Zone -->
-    <div id="drop-zone" class="drop-zone"></div>
+    <div id="drop-zone" class="drop-zone">Drop here!</div>
 
     <!-- Draggable Options -->
-    <!-- <img src="key.png" alt="Key" id="draggable-key" class="draggable-key" draggable="true"> -->
+    <img id="circle" class="shape" src="images/circle.png" alt="circle" draggable="true">
+    <img id="square" class="shape" src="images/square.png" alt="square" draggable="true">
+    <img id="heart" class="shape" src="images/heart.png" alt="heart" draggable="true">
+    <img id="triangle" class="shape" src="images/triangle.png" alt="triangle" draggable="true">
+    <img id="star" class="shape" src="images/star.jpg" alt="star" draggable="true">
+
+    <audio id="audio-player" style="display:none;"></audio>
 
 </div>
 <script src="puzzle.js"></script>
