--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <div id="background-map" style="display: grid; place-items: center">
+        <div id="background-map" style="display: grid; place-items: center;">
             <div class="navbar" style="border: 2px solid #89A15B; width: 41.5%; height: 4em; background-color: #89A15B">
                 <ul>
                     <li><a>Inventory</a></li>
@@ -18,7 +18,7 @@
             <img src="map.png" 
             style="
             margin-top: 4.5rem;
-            height: 45rem; 
+            height: 41.5rem; 
             position: absolute;
             top: 0px;
             z-index: -1;"/>
