--- a/level3quiz.html
+++ b/level3quiz.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Level 3</title>
+    <link rel="stylesheet" href="puzzle.css">
 </head>
 <body>
+<div>
+    <h1>Explore the volcano!  </h1>
+    <!-- Volcano -->
+    <img id="volcano-image" src="images/volcano1.jpg" alt="before">
+    <img id="bakingsode-image" src="images/bakingsoda.jpg" alt="bakingsoda">
+</div>
 
 </body>
 </html>
