Updated the point system for level 1

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
         <button class="back-btn">Back</button>
         <div id="inventory-el">        
             <h1>Inventory</h1>
-            <h3>Current Level: </h3>
+            <h3 id="level-el">Current Level: </h3>
             <h3>Points: </h3>
             <h3 class="relics-el">Collected Relics: </h3>
         </div>
