--- a/level3quiz.html
+++ b/level3quiz.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Level 3</title>
-    <link rel="stylesheet" href="puzzle.css">
+    <link rel="stylesheet" href="vocalno.css">
 </head>
 <body>
-<div>
+<div class="volcano-container">
     <h1>Explore the volcano!  </h1>
     <!-- Volcano -->
     <img id="volcano-image" src="images/volcano1.jpg" alt="before">
-    <img id="bakingsode-image" src="images/bakingsoda.jpg" alt="bakingsoda">
-</div>
+    <img id="bakingsoda-image" src="images/bakingsoda.png" alt="bakingsoda">
 
+    <audio id="audio-player" style="display:none;"></audio>
+</div>
 </body>
 </html>
