--- a/map.html
+++ b/map.html
@@ -11,7 +11,7 @@
         <div id="background-map" style="display: grid; place-items: center;">
             <div class="navbar" style="border: 2px solid #89A15B; width: 41.5%; height: 4em; background-color: #89A15B">
                 <ul>
-                    <li><a>Inventory</a></li>
+                    <li><a href="index2.html">Inventory</a></li>
                     <li><a>Profile</a></li>
                 </ul>
             </div>
