--- a/ElleHacks Hackathon 2025/map.html
+++ b/ElleHacks Hackathon 2025/map.html
@@ -20,6 +20,8 @@
             <img id="map-img" src="map.png"/>
 
             <div id="level1-btn" onclick="goToLevel1()"></div>
+            <div id="level2-btn" onclick="goToLevel2()"></div>
+            <div id="level3-btn" onclick="goToLevel3()"></div>
 
         </div>
     
