--- a/ElleHacks Hackathon 2025/level1-flashcards.html
+++ b/ElleHacks Hackathon 2025/level1-flashcards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Game</title>
     <link rel="stylesheet" href="card.css">
-    <script src="script.js" defer></script>
+    <script src="flashcards.js" defer></script>
 </head>
 <body>
 <div class="game_content">
