--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
 
             <div class="navbar">
                 <ul>
-                    <li><a href="index.html">INVENTORY</a></li>
+                    <li><a href="index2.html">INVENTORY</a></li>
                     <li><a href="profile.html">PROFILE</a></li>
                 </ul>
             </div>
