--- a/level2-quiz.html
+++ b/level2-quiz.html
@@ -9,12 +9,10 @@
 <div class="puzzle-container">
     <h1>Unlock the gate! </h1>
     <!-- Castle -->
-    <img id="gate-image" src="images/closedgate.png" alt="Closed Gate">
-
+    <img id="gate-image" src="images/closed_gate.png" alt="Closed Gate">
 
     <!-- Drag Zone -->
     <div id="drop-zone" class="drop-zone">Drop here!</div>
-
 
     <!-- Draggable Options -->
     <img id="circle" class="shape" src="images/circle.png" alt="circle" draggable="true">
@@ -23,12 +21,9 @@
     <img id="triangle" class="shape" src="images/triangle.png" alt="triangle" draggable="true">
     <img id="star" class="shape" src="images/star.jpg" alt="star" draggable="true">
 
-
     <audio id="audio-player" style="display:none;"></audio>
-
 
 </div>
 <script src="puzzle.js"></script>
 </body>
 </html>
-
