--- a/level1-quiz.html
+++ b/level1-quiz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Adventure Matching Game</title>
   <link rel="stylesheet" href="quiz.css">
-  <script src="script.js" defer></script>
+  <script src="quiz1.js" defer></script>
 </head>
 <body>
 <div class="gameoverall"><br>
