--- a/level2-quiz.html
+++ b/level2-quiz.html
@@ -9,7 +9,7 @@
 <div class="puzzle-container">
     <h1>Unlock the gate! </h1>
     <!-- Castle -->
-    <img id="gate-image" src="images/closedgate.png" alt="Closed Gate">
+    <img id="gate-image" src="images/closed_gate.png" alt="Closed Gate">
 
 
     <!-- Drag Zone -->
