Fixed volcano animation and linked most pages together

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
   <button id="speakAI">Speak</button>
   <button id="record-card">Record</button>
   <button id="next-card">Next</button>
+  <a href="level1quiz.html"><button>Start Quiz</button></a>
 </div>
 <script src="gamescript.js"></script>
 </body>
