--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script>
         function playbutton() {
-            alert("Play button clicked!"); // Replace with your actual function logic
+            window.location.href = "map.html";
         }
     </script>
 </head>
