--- a/index2.html
+++ b/index2.html
@@ -2,16 +2,17 @@
     <head>
         <link rel="stylesheet" href="index.css">
     </head>
-
     <body>
         <div id="background-el">
-        <button class="back-btn">Back</button>
-        <div id="inventory-el">        
-            <h1>Inventory</h1>
-            <h3 id="level-el">Current Level: </h3>
-            <h3>Points: </h3>
-            <h3 class="relics-el">Collected Relics: </h3>
+
+            <a href="map.html"><button class="back-btn" onclick="map()">Back</button></a>
+            <div id="inventory-el">        
+                <h1>Inventory</h1>
+                <h3 id="level-el">Current Level: </h3>
+                <h3>Points: </h3>
+                <h3 class="relic-el">Collected Relics: </h3>
+            </div>
         </div>
-        </div>
+        <script src="index.js" defer></script>
     </body>
 </html>
