--- a/level1welcomepage.html
+++ b/level1welcomepage.html
@@ -31,7 +31,7 @@
             🎉 Win the Game!<br>
             Collect all the Energy Relic and become a Word Master!</div>
 
-        <button id="startbutton" type="button">Start</button>
+        <a href="game.html"><button id="startbutton" type="button">Start</button></a>
     </div>
 </body>
 </html>
