--- a/level2welcome.html
+++ b/level2welcome.html
@@ -28,7 +28,7 @@
         🎉 Win the Game!<br>
         Collect all the Energy Relic and become a Shape Master!</div>
 
-    <button id="startbutton" type="button">Start</button>
+    <a href="level2quiz.html"><button id="startbutton" type="button">Start</button></a>
 </div>
 </body>
 </html>
