--- a/level3welcome.html
+++ b/level3welcome.html
@@ -23,7 +23,7 @@
         Try to avoid the magma to survive. <br><br>
         </div>
 
-    <button id="startbutton" type="button">Start</button>
+    <a href="level3quiz.html"><button id="startbutton" type="button">Start</button></a>
 </div>
 </body>
 </html>
